--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "@heroicons/react": "^2.0.18",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "chakra": "^0.0.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "4",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "*"
+    "typescript": "*",
+    "ui": "^0.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
