--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chakra": "^0.0.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.9",
+    "eslint-config-prettier": "^8.8.0",
     "framer-motion": "4",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
