--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "chakra": "^0.0.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.9",
-    "eslint-config-prettier": "^8.8.0",
     "framer-motion": "4",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
@@ -35,6 +34,8 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
