--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "rss-parser": "^3.13.0",
     "tailwindcss": "3.3.2",
     "typescript": "*",
     "ui": "^0.2.4"
