--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@next/font": "^13.4.10",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-burger-menu": "^2.8.3",
