--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.14",
     "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "18.2.6",
+    "@types/react-scroll": "^1.8.7",
     "autoprefixer": "10.4.14",
     "chakra": "^0.0.3",
     "eslint": "^8.0.1",
@@ -31,6 +32,8 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
+    "react-scroll": "^1.8.9",
     "rss-parser": "^3.13.0",
     "tailwindcss": "3.3.2",
     "typescript": "*",
