--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@next/font": "^13.4.10",
@@ -21,7 +18,6 @@
     "@types/react-dom": "18.2.6",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "10.4.14",
-    "chakra": "^0.0.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.9",
     "framer-motion": "4",
@@ -36,8 +32,7 @@
     "react-scroll": "^1.8.9",
     "rss-parser": "^3.13.0",
     "tailwindcss": "3.3.2",
-    "typescript": "*",
-    "ui": "^0.2.4"
+    "typescript": "*"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
